ルールを追加

--- a/config/origin_rules.yml
+++ b/config/origin_rules.yml
@@ -9,6 +9,16 @@ alias:
   七森中☆ごらく部:
     - 七森中☆ごらく部
     - ごらく部
+  三上枝織:
+    - ごらく部
+  大坪由佳:
+    - ごらく部
+  津田美波:
+    - ごらく部
+    - 津田ちゃん
+    - つだちゃん
+  大久保瑠美:
+    - ごらく部
   μ's:
     - μ's
     - ラブライブ
