ルール更新

--- a/config/origin_rules.yml
+++ b/config/origin_rules.yml
@@ -72,3 +72,11 @@ alias:
     - にこちゃん
     - にこにこにー
     - 世界の矢澤
+  涼風青葉:
+    - 涼風青葉
+    - 青葉
+    - NEWGAME
+  Aqours:
+    - Aqours
+    - アクア
+    - サンシャイン
