独自ルールによる更新処理追加

--- a/config/origin_rules.yml
+++ b/config/origin_rules.yml
@@ -1,11 +1,4 @@
 list:
-  - 七森中☆ごらく部
-  - μ's
-  - ラブライブ
-  - ラブライブ！
-  - ゆるゆり
-
-alias:
   七森中☆ごらく部:
     - 七森中☆ごらく部
     - ごらく部
@@ -82,3 +75,12 @@ alias:
     - Aqours
     - アクア
     - サンシャイン
+  渋谷凛:
+    - 渋谷凛
+    - しぶりん
+  島村卯月:
+    - 島村卯月
+    - しまむー
+  本田未央:
+    - 本田未央
+    - ちゃんみお
